--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint": "^3.14.1",
     "gulp-util": "^2.2.14",
     "jasmine-core": "^2.5.2",
+    "jasmine-spec-reporter": "^3.2.0",
     "karma": "^1.4.1",
     "karma-jasmine": "^1.1.0",
     "karma-phantomjs-launcher": "^1.0.2",
