--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
   "devDependencies": {
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
-    "shelljs": "^0.3.0"
+    "shelljs": "^0.3.0",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
+    "cucumber": "^1.3.0",
+    "protractor": "4.0.13",
+    "protractor-jasmine2-screenshot-reporter": "0.3.2",
+    "protractor-cucumber-framework": "^0.6.0"
   },
   "cordovaPlugins": [
     "cordova-plugin-whitelist",
