--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.1.1",
   "description": "adventure-map-mobile: An Ionic project",
   "scripts": {
-    "test": "karma start tests/karma.conf.js --single-run"
+    "test": "karma start tests/karma.conf.js --single-run",
+    "features": "ionic-app-scripts build && protractor",
+    "postinstall": "ionic state restore && webdriver-manager update"
   },
   "dependencies": {
     "gulp": "^3.5.6",
@@ -22,7 +24,7 @@
     "cucumber": "^1.3.0",
     "protractor": "4.0.13",
     "protractor-jasmine2-screenshot-reporter": "0.3.2",
-    "protractor-cucumber-framework": "^0.6.0"
+    "protractor-cucumber-framework": "^0.6.0",
     "jasmine-core": "^2.5.2",
     "jasmine-spec-reporter": "^3.2.0",
     "karma": "^1.4.1",
