moves features folder into tests modifies README removes script from package.json

--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.1.1",
   "description": "adventure-map-mobile: An Ionic project",
   "scripts": {
-    "test": "karma start tests/karma.conf.js --single-run",
-    "cucumber": "protractor protractor.conf.js"
+    "test": "karma start tests/karma.conf.js --single-run"
   },
   "dependencies": {
     "gulp": "^3.5.6",
