--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bower": "^1.3.3",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
+    "cucumber": "^1.3.1",
     "eslint": "^3.14.1",
     "gulp-util": "^2.2.14",
     "jasmine-core": "^2.5.2",
