--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.3.2",
-    "angular-mocks": "^1.6.1"
+    "angular-mocks": "^1.6.1",
+    "ng-resource": "^0.0.2"
   },
   "resolutions": {
     "angular": "1.6.1"
