--- a/bower.json
+++ b/bower.json
@@ -3,13 +3,13 @@
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.3.2",
-    "angular-mocks": "^1.6.1",
-    "ng-resource": "^0.0.2"
+    "angular-mocks": "^1.6.1"
   },
   "resolutions": {
     "angular": "1.6.1"
   },
   "dependencies": {
-    "ng-token-auth": "^0.0.29"
+    "ng-token-auth": "^0.0.29",
+    "angular-resource": "^1.6.1"
   }
 }
