--- a/bower.json
+++ b/bower.json
@@ -14,5 +14,6 @@
     "angular-resource": "1.5.3",
     "ngCordova": "^0.1.27-alpha",
     "leaflet": "http://cdn.leafletjs.com/leaflet/v1.0.3/leaflet.zip"
+    "bourbon": "^4.3.2"
   }
 }
