--- a/bower.json
+++ b/bower.json
@@ -7,10 +7,12 @@
   },
   "resolutions": {
     "angular": "1.5.3"
+     "leaflet": "^1.0.3"
   },
   "dependencies": {
     "ng-token-auth": "^0.0.29",
     "angular-resource": "1.5.3",
     "ngCordova": "^0.1.27-alpha"
+    "leaflet": "http://cdn.leafletjs.com/leaflet/v1.0.3/leaflet.zip"
   }
 }
