do not track compiled stylesheets, fix livereload setup and update README

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -10,5 +10,10 @@
     "www/**/*",
     "!www/lib/**/*",
     "!www/**/*.map"
+  ],
+  "livereload": [
+    "www/**/*.html",
+    "www/**/*.js",
+    "www/**/*.css"
   ]
 }
