trying a fix that includes adding a proxy for calls

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,12 @@
 {
   "name": "adventure-map-mobile",
   "app_id": "7e351a02",
+  "proxies": [
+    {
+      "path": "/api/v1",
+      "proxyUrl": "https://test-adventure.herokuapp.com/api/v1"
+    }
+  ],
   "gulpStartupTasks": [
     "sass",
     "watch"
