--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "angular-md5": "^0.1.10",
     "identicon.js": "identicon#^2.1.0",
     "ngstorage": "^0.3.11",
-    "Proj4Leaflet": "proj4leaflet#^1.0.1"
+    "Proj4Leaflet": "proj4leaflet#^1.0.1",
+    "ionic-advanced-carousel": "^1.1.1"
   }
 }
