adds horizontal-scroll-cards to show activity page refactors avata css

--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,6 @@
     "identicon.js": "identicon#^2.1.0",
     "ngstorage": "^0.3.11",
     "Proj4Leaflet": "proj4leaflet#^1.0.1",
-    "ionic-advanced-carousel": "^1.1.1"
+    "ionic-ion-horizontal-scroll-cards": "*"
   }
 }
