--- a/package.json
+++ b/package.json
@@ -1,54 +1,68 @@
 {
-  "name": "adventure-map-mobile",
-  "version": "1.1.1",
-  "description": "adventure-map-mobile: An Ionic project",
-  "scripts": {
-    "test": "karma start tests/karma.conf.js --single-run",
-    "cucumber": "protractor tests/protractor.conf.js"
-  },
-  "dependencies": {
-    "cordova-plugin-x-socialsharing": "git+https://github.com/EddyVerbruggen/SocialSharing-PhoneGap-Plugin.git",
-    "gulp": "^3.5.6",
-    "gulp-concat": "^2.2.0",
-    "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0",
-    "gulp-sass": "^2.0.4"
-  },
-  "devDependencies": {
-    "bower": "^1.3.3",
-    "chai": "^3.5.0",
-    "chai-as-promised": "^6.0.0",
-    "cucumber": "^1.3.1",
-    "eslint": "^3.14.1",
-    "gulp-util": "^2.2.14",
-    "jasmine-core": "^2.5.2",
-    "jasmine-spec-reporter": "^3.2.0",
-    "karma": "^1.4.1",
-    "karma-coverage": "^1.1.1",
-    "karma-jasmine": "^1.1.0",
-    "karma-mocha-reporter": "^2.2.2",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "protractor": "^5.1.0",
-    "protractor-cucumber-framework": "^0.6.0",
-    "shelljs": "^0.3.0"
-  },
-  "cordovaPlugins": [
-    "cordova-plugin-whitelist",
-    "cordova-plugin-statusbar",
-    "cordova-plugin-camera",
-    "cordova-plugin-console",
-    "cordova-plugin-device",
-    "cordova-plugin-splashscreen",
-    "cordova-plugin-inappbrowser",
-    "cordova-plugin-geolocation",
-    "ionic-plugin-keyboard"
-  ],
-  "cordovaPlatforms": [
-    "ios",
-    {
-      "platform": "ios",
-      "version": "",
-      "locator": "ios"
+    "name": "adventure-map-mobile",
+    "version": "1.1.1",
+    "description": "adventure-map-mobile: An Ionic project",
+    "scripts": {
+        "test": "karma start tests/karma.conf.js --single-run",
+        "cucumber": "protractor tests/protractor.conf.js"
+    },
+    "dependencies": {
+        "cordova-ios": "^4.4.0",
+        "cordova-plugin-compat": "^1.1.0",
+        "cordova-plugin-file": "^4.3.3",
+        "cordova-plugin-inappbrowser": "^1.6.1",
+        "cordova-plugin-x-socialsharing": "git+https://github.com/EddyVerbruggen/SocialSharing-PhoneGap-Plugin.git",
+        "es6-promise-plugin": "^4.1.0",
+        "gulp": "^3.5.6",
+        "gulp-concat": "^2.2.0",
+        "gulp-minify-css": "^0.3.0",
+        "gulp-rename": "^1.2.0",
+        "gulp-sass": "^2.0.4"
+    },
+    "devDependencies": {
+        "bower": "^1.3.3",
+        "chai": "^3.5.0",
+        "chai-as-promised": "^6.0.0",
+        "cucumber": "^1.3.1",
+        "eslint": "^3.14.1",
+        "gulp-util": "^2.2.14",
+        "jasmine-core": "^2.5.2",
+        "jasmine-spec-reporter": "^3.2.0",
+        "karma": "^1.4.1",
+        "karma-coverage": "^1.1.1",
+        "karma-jasmine": "^1.1.0",
+        "karma-mocha-reporter": "^2.2.2",
+        "karma-phantomjs-launcher": "^1.0.2",
+        "protractor": "^5.1.0",
+        "protractor-cucumber-framework": "^0.6.0",
+        "shelljs": "^0.3.0"
+    },
+    "cordovaPlugins": [
+        "cordova-plugin-whitelist",
+        "cordova-plugin-statusbar",
+        "cordova-plugin-camera",
+        "cordova-plugin-console",
+        "cordova-plugin-device",
+        "cordova-plugin-splashscreen",
+        "cordova-plugin-inappbrowser",
+        "cordova-plugin-geolocation",
+        "ionic-plugin-keyboard"
+    ],
+    "cordovaPlatforms": [
+        "ios",
+        {
+            "platform": "ios",
+            "version": "",
+            "locator": "ios"
+        }
+    ],
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-file": {},
+            "cordova-plugin-inappbrowser": {}
+        },
+        "platforms": [
+            "ios"
+        ]
     }
-  ]
 }
