--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
         "gulp-concat": "^2.2.0",
         "gulp-minify-css": "^0.3.0",
         "gulp-rename": "^1.2.0",
-        "gulp-sass": "^2.0.4"
+        "gulp-sass": "^2.0.4",
+        "cordova-plugin-file": "~4.3.1",
+        "cordova-plugin-inappbrowser": "~1.6.1"
     },
     "devDependencies": {
         "bower": "^1.3.3",
@@ -53,7 +55,9 @@
     ],
     "cordova": {
         "plugins": {
-            "cordova-plugin-network-information": {}
+            "cordova-plugin-network-information": {},
+            "cordova-plugin-file": {},
+            "cordova-plugin-inappbrowser": {}
         }
     }
 }
