--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "cordova-plugin-inappbrowser": "^1.6.1",
         "cordova-plugin-x-socialsharing": "git+https://github.com/EddyVerbruggen/SocialSharing-PhoneGap-Plugin.git",
         "es6-promise-plugin": "^4.1.0",
-        "gulp": "^3.5.6",
+        "gulp": "^3.9.1",
         "gulp-concat": "^2.2.0",
         "gulp-minify-css": "^0.3.0",
         "gulp-rename": "^1.2.0",
@@ -59,7 +59,15 @@
     "cordova": {
         "plugins": {
             "cordova-plugin-file": {},
-            "cordova-plugin-inappbrowser": {}
+            "cordova-plugin-inappbrowser": {},
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-camera": {},
+            "cordova-plugin-console": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-geolocation": {},
+            "ionic-plugin-keyboard": {}
         },
         "platforms": [
             "ios"
