--- a/package.json
+++ b/package.json
@@ -11,13 +11,21 @@
         "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-file": "^4.3.3",
         "cordova-plugin-inappbrowser": "^1.6.1",
-        "cordova-plugin-x-socialsharing": "git+https://github.com/EddyVerbruggen/SocialSharing-PhoneGap-Plugin.git",
+        "cordova-plugin-x-socialsharing": "~5.1.8",
         "es6-promise-plugin": "^4.1.0",
         "gulp": "^3.9.1",
         "gulp-concat": "^2.2.0",
         "gulp-minify-css": "^0.3.0",
         "gulp-rename": "^1.2.0",
-        "gulp-sass": "^2.0.4"
+        "gulp-sass": "^2.0.4",
+        "cordova-plugin-camera": "~2.4.0",
+        "cordova-plugin-console": "~1.0.5",
+        "cordova-plugin-device": "~1.1.4",
+        "cordova-plugin-geolocation": "~2.4.2",
+        "cordova-plugin-splashscreen": "~4.0.1",
+        "cordova-plugin-statusbar": "~2.2.1",
+        "cordova-plugin-whitelist": "~1.3.1",
+        "ionic-plugin-keyboard": "~2.2.1"
     },
     "devDependencies": {
         "bower": "^1.3.3",
@@ -67,7 +75,8 @@
             "cordova-plugin-device": {},
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-geolocation": {},
-            "ionic-plugin-keyboard": {}
+            "ionic-plugin-keyboard": {},
+            "cordova-plugin-x-socialsharing": {}
         },
         "platforms": [
             "ios"
