--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,6 @@
     "leaflet-providers": "^1.1.15",
     "leaflet.markercluster": "^1.0.5",
     "what-input": "^4.1.3",
-    "ionic-toast": "^0.4.1",
-    "leaflet.loading": "Leaflet.loading#^0.1.24"
+    "ionic-toast": "^0.4.1"
   }
 }
